--- a/project-manager.html
+++ b/project-manager.html
@@ -44,7 +44,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.qreer.com/jobs/view/12170/project-manager-with-agile-experience'>Project Manager with Agile experience Job in Veldhoven, Netherlands</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.qreer.com/jobs/view/12170/project-manager-with-agile-experience'>Project Manager with Agile experience Job in Veldhoven, Netherlands</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -100,7 +100,7 @@
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/ashoka/job/oNXkbfwZ'>Ashoka Careers - Partnerships and Project Manager Poland</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/ashoka/job/oNXkbfwZ'>Ashoka Careers - Partnerships and Project Manager Poland</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -306,6 +306,11 @@
 <p><span class="badge badge-light">Toronto Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
+<h5><a href='http://jobs.jobvite.com/spotify/job/oztobfwl'>Financial Engineering Program Manager, Risk, and Controls ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 22, 2019 ... In this role, you'll work with the Product Area Leads of Financial Engineering, 
+helping to re-engineer the way Finance does business ? in a controlled way.</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/dentwizard/job/oOJrbfwT'>Dent Wizard International Careers - Regional Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
@@ -358,7 +363,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/ipg/job/xnp9twz9kbpb54dspxwq9i4izw'>Project Manager | Integrity Placement Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/ipg/job/xnp9twz9kbpb54dspxwq9i4izw'>Project Manager | Integrity Placement Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -451,10 +456,6 @@
 <h5><a href='https://jobs.smartrecruiters.com/Visa/743999698385713-junior-project-manager-scrum-master-client-services'>Visa Junior Project Manager / Scrum Master - Client Services | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://energystoragejobs.co.uk/job/239/senior-project-manager-flexible-generation-peaking-plant-energy-storage-assets/'>Senior Project Manager ? Flexible Generation (Peaking Plant, Energy Storage Assets) | energystoragejobs</a></h5> 
-<p><span class="badge badge-light">London</span></p>
-<p>Posted on:: 2019-10-29</p>
 <hr/>
 
 
